--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">河南剧毒库房应用</string>
+    <string name="app_name">数据采集器</string>
     <string name="ip_id">设备IP号:</string>
     <string name="dev_id">设备ID号:</string>
     <string name="server_ip">服务器地址:</string>
